fix(styles): fix ck-editor checkboxes not showing checkmark while printing
Due to CSS specificity using plain "input[checked]::before" does not
work.

fixes #901

--- a/src/public/stylesheets/print.css
+++ b/src/public/stylesheets/print.css
@@ -25,4 +25,11 @@
         border: 0.75pt solid gray !important;
         border-radius: 2pt !important;
     }
+
+    /* Fix visibility of checkbox checkmarks
+       see https://github.com/TriliumNext/Notes/issues/901 */
+    .ck-editor__editable.ck-content .todo-list .todo-list__label > span[contenteditable="false"] > input[checked]::after {
+        /* fallback to default ck-editor green */
+        border-color: hsl(126, 64%, 41%);
+    }
 }
